<resources>
    <string name="app_name">Sensors</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="value_sensor">Value</string>
    <string name="sensor_name">Sensor</string>
    <string name="accelerometer_x">Accelerometer X</string>
    <string name="acc_x">0</string>
    <string name="accelerometer_y">Accelerometer Y</string>
    <string name="acc_y">0</string>
    <string name="accelerometer_z">Accelerometer Z</string>
    <string name="acc_z">0</string>
    <string name="light_sensor">Light</string>
    <string name="light">0</string>
    <string name="gyroscope_x">Gyroscope X</string>
    <string name="gyro_x">0</string>
    <string name="gyroscope_y">Gyroscope Y</string>
    <string name="gyro_y">0</string>
    <string name="gyroscope_z">Gyroscope Z</string>
    <string name="gyro_z">0</string>
</resources>