<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="sensorViewModel"
            type="edu.zut.erasmus_plus.sensors.viewmodel.SensorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/cardview_shadow_start_color"
        tools:context=".view.MainActivity">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:padding="5dp"
            android:stretchColumns="2"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".view.MainActivity"
            tools:layout_editor_absoluteX="16dp">

            <TableRow>

                <TextView
                    android:layout_height="40dp"
                    android:layout_column="1"
                    android:background="@color/primaryLightColor"
                    android:gravity="center"
                    android:minWidth="200dp"
                    android:text="@string/sensor_name"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_column="2"
                    android:background="@color/primaryDarkColor"
                    android:gravity="center"
                    android:text="@string/value_sensor"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:gravity="center"
                    android:text="@string/accelerometer_x"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/acc_X"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="@{String.valueOf(sensorViewModel.sensor.accX)}"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:gravity="center"
                    android:text="@string/accelerometer_y"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/acc_Y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="@{String.valueOf(sensorViewModel.sensor.accY)}"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:gravity="center"
                    android:text="@string/accelerometer_z"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/acc_Z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="@{String.valueOf(sensorViewModel.sensor.accZ)}"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:gravity="center"
                    android:text="@string/light_sensor"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="@{String.valueOf(sensorViewModel.sensor.light)}"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:gravity="center"
                    android:text="@string/gyroscope_x"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/gyro_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="@{String.valueOf(sensorViewModel.sensor.gyroX)}"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:gravity="center"
                    android:text="@string/gyroscope_y"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/gyro_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="@{String.valueOf(sensorViewModel.sensor.gyroY)}"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:gravity="center"
                    android:text="@string/gyroscope_z"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/gyro_z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_column="2"
                    android:text="@{String.valueOf(sensorViewModel.sensor.gyroZ)}"
                    android:textAlignment="center"
                    android:textSize="18sp" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="50dp"
            android:background="@color/design_default_color_primary_dark"
            android:enabled="@{sensorViewModel.pauseReading}"
            android:onClick="@{()->sensorViewModel.changeButtonStatus()}"
            android:text="@string/start"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/stop_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="50dp"
            android:background="@color/primaryDarkColor"
            android:enabled="@{!sensorViewModel.pauseReading}"
            android:onClick="@{()->sensorViewModel.changeButtonStatus()}"
            android:text="@string/stop"
            android:textColor="@color/primaryTextColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/start_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>